tests/ui/consts/recursive-const-in-impl.stderr
error: queries overflow the depth limit!
  --> $DIR/recursive-const-in-impl.rs:11:14
   |
LL |     println!("{}", Thing::<i32>::X);
   |              ^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "14"]` attribute to your crate (`recursive_const_in_impl`)
   = note: query depth increased by 9 when simplifying constant for the type system `main::promoted[1]`

error: aborting due to 1 previous error

